# Blaze-mq

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
benchmarks/: latency_bench.cpp
config/: blazemq.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  DOCKERHUB.md  PRODUCT.md
include/core/: types.h
include/network/: tcp_server.h
include/protocol/: kafka_codec.h
include/storage/: partition_log.h
include/utils/: endian.h  memory_pool.h  ring_buffer.h
src/: main.cpp
src/network/: tcp_server.cpp
src/protocol/: kafka_codec.cpp
tests/: kafka_codec_test.cpp  memory_pool_test.cpp  ring_buffer_test.cpp
